# Learning-Machine-Learning

./: .gitignore  README.md  pyproject.toml
disco_torch/: __init__.py  load_weights.py  meta_net.py  update_rule.py  utils.py  value_utils.py
scripts/: inspect_disco103.py  validate_against_jax.py
